--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,5 +17,6 @@ jobs:
         uses: SamKirkland/FTP-Deploy-Action@4.3.0
         with:
           server: ftp.cluster029.hosting.ovh.net
+          server-dir: www
           username: tkpripq
           password: ${{ secrets.FTP_PASSWORD }}
